removed broken links

--- a/call.html
+++ b/call.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" width="device.width">
-	<meta name="description" content="Getting started with web design">
-	<meta name="keywords" content="getting started,  web design">
+	<meta name="description" content="Calling for government intervetion ">
+	<meta name="keywords" content="government,  intervetion">
 	<meta name="Author" content="Ivan">
-	<title>iReporter| About</title>
+	<title>iReporter| Call</title>
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
